移除等待卡片移走的功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "delay.h": "c",
-        "serial.h": "c"
+        "serial.h": "c",
+        "rc522.h": "c"
     },
     "files.encoding": "gb2312"
 }
